--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@nextui-org/card": "^2.0.30",
+    "@nextui-org/system": "^2.2.1",
+    "@nextui-org/theme": "^2.2.5",
     "@types/tailwindcss": "^3.1.0",
     "aos": "^3.0.0-beta.6",
+    "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
